# kalpa

./: .claudeignore  .env.example  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  claude.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: beta_feedback.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-worker.yml  release.yml  slint-ci.yml
backend/eso-packs-worker/: package-lock.json  package.json  vitest.config.ts  wrangler.toml
backend/eso-packs-worker/src/: cors.test.ts  cors.ts  index.ts  kv.ts  pack-index-do.ts  rate-limit.ts  redact.ts  seed.ts  shares.test.ts  shares.ts  types.ts  validate.test.ts  validate.ts
backend/eso-packs-worker/test/: cors.test.ts  helpers.ts  kv.test.ts  routes.test.ts  scheduled.test.ts  shares.test.ts  validate.test.ts
context/: 00-overview.md  10-desktop-client.md  20-metadata-worker.md  30-mvp-plan.md  40-design-system.md  41-component-patterns.md  42-theme-tokens.md  50-protected-edits.md
docs/: audit-2026-07.md  native-live-streaming-spike-FINDINGS.md  native-ui-port.md  native-upload-infinite-archive-scoping.md  native-upload-owner-verification.md  native-uploader-finish-prompt.md  native-uploader-next-steps.md  native-uploader-plan.md  settings-export.md  verify-download.md
docs/audits/: log-uploader-audit.md
e2e/: addon-list.spec.ts  app-launch.spec.ts  helpers.ts  settings-dialog.spec.ts
prototypes/slint-kalpa/: Cargo.toml  PARITY-BACKLOG.md  PORTING.md  README.md  build.rs
prototypes/slint-kalpa/assets/themes/: builtin-themes.json
prototypes/slint-kalpa/src/: main.rs  native_char_backup.rs  token_store.rs  uploader_login.rs
prototypes/slint-kalpa/tools/: capture-states.ps1  export-native-skins.mjs  export-native-themes.mjs  screenshot-diff.mjs  screenshot-diff.ps1
prototypes/slint-kalpa/ui/: kalpa.slint
public/: theme-boot.js
scripts/: build-native-slint-sidecar.mjs  check-env.js  ensure-slint-sidecar-placeholder.mjs  measure-esologs-report-ready.mjs
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  keys.pub  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  bench_alloc.rs  commands.rs  edit_backups.rs  esoui.rs  file_hashes.rs  game_instances.rs  installer.rs  lib.rs  main.rs  manifest.rs  manifest_cache.rs  metadata.rs  platform.rs  safe_migration.rs  settings_store.rs  token_store.rs
src-tauri/src/saved_variables/: char_backup.rs  identity_stream.rs  io.rs  lam_scan.rs  mod.rs  parser.rs  profile.rs  roster_stream.rs  scrub.rs  serializer.rs  types.rs
src-tauri/src/uploader/: bench.rs  commands.rs  discovery.rs  history.rs  mod.rs  native_probe.rs  scanner.rs  sidecar.rs  splitter.rs  tail_io.rs  transport.rs  types.rs  watcher.rs
src-tauri/src/uploader/native/: a_counter.rs  build_evidence.rs  client.rs  companion.rs  convert.rs  coverage.rs  differential.rs  encode.rs  events.rs  format.rs  incremental.rs  live.rs  login.rs  mod.rs  orphans.rs  serialize.rs  session.rs  zip_segment.rs
src-tauri/src/uploader/native/testdata/: chunk1_master.txt  code1_event_golden.tsv  sample_fights_segment.txt  sample_master_table.txt
src/components/: addon-detail.tsx  addon-file-browser.tsx  addon-file-editor.tsx  addon-list.tsx  api-compat.tsx  app-background.tsx  app-dialogs.tsx  app-header.tsx  app-update.tsx  appearance-settings.tsx  backups.tsx  browse-esoui.tsx  category-browser.tsx  cfa-guidance-dialog.tsx  characters.tsx  diff-viewer.tsx  discover-detail.tsx  discover-panel.tsx  eso-running-dialog.tsx  install-dialog.tsx  migration-wizard.tsx  pack-browse.tsx  pack-constants.ts  pack-create.tsx  pack-detail.tsx  pack-import.tsx  pack-my-packs.tsx  packs.tsx  profiles.tsx  roster-pack-install.tsx  safety-center.tsx  saved-variables.tsx  settings.tsx  setup-wizard.tsx  status-banners.tsx  sv-controls.tsx  theme-editor.tsx  update-banner.tsx  update-conflict-panel.tsx
src/components/__tests__/: sv-dropdown-control.test.tsx
src/components/ui/: alert.tsx  animated-checkmark.tsx  badge.tsx  button.tsx  checkbox.tsx  color-input.tsx  combobox.tsx  context-menu.tsx  dialog.tsx  glass-panel.tsx  info-pill.tsx  input.tsx  popover.tsx  rich-description.tsx  scroll-area.tsx  section-header.tsx  select.tsx  separator.tsx  skeleton.tsx  skeletons.tsx  sonner.tsx  tabs.tsx  theme-swatch.tsx  tooltip.tsx
src/components/uploader/: fight-list.tsx  history-panel.tsx  live-event-reducer.ts  log-picker.tsx  naming.ts  split-workbench.tsx  upload-options.tsx  upload-progress.tsx  uploader-actions.ts  uploader-shared.tsx  uploader-workspace.tsx  use-live-session.ts
src/hooks/: use-auto-height.tsx  use-capped-animation-rate.ts  use-controlled-state.tsx
src/hooks/__tests__/: use-controlled-state.test.tsx
src/lib/: addon-helpers.ts  ambient-animations.ts  character-backup.ts  eso-running-context.tsx  kalpa-codemirror-theme.ts  pack-install.ts  platform.ts  store.test.ts  store.ts  sv-dropdown-filter.ts  sv-helpers.ts  sv-nodes.ts  sv-settings-search.ts  sv-widgets.ts  tauri.test.ts  tauri.ts  theme-apply.ts  theme-color.ts  theme-contrast.ts  theme-manager.ts  theme-presets.ts  theme-skins.ts  theme-types.ts  use-theme.ts  utils.test.ts  utils.ts
src/lib/__tests__/: addon-filtering.test.ts  character-backup.test.ts  get-strict-context.test.tsx  pack-constants.test.ts  saved-variables-logic.test.ts  store.test.ts  sv-dropdown-filter.test.ts  sv-dropdown.test.ts  sv-nodes.test.ts  sv-settings-search.test.ts  sv-widgets-edge-cases.test.ts  sv-widgets.test.ts  tauri-error-edge-cases.test.ts  tauri.test.ts  theme-boot.test.ts  theme-contrast.test.ts  update-progress.test.ts  utils-edge-cases.test.ts  utils.test.ts
src/types/: uploader.ts
(+21 files in other folders)
