[package]
name = "eso-addon-manager"
version = "0.1.0"
edition = "2021"
description = "A fast, open-source addon manager for The Elder Scrolls Online"
license = "MIT"
repository = "https://github.com/BraydenPB/eso-addon-manager"

[lib]
name = "eso_addon_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["rt"] }
scraper = "0.26"
zip = "8"
tempfile = "3"
regex = "1"
base64 = "0.22"
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
