[package]
name = "kalpa"
version = "0.3.0"
edition = "2021"
description = "A fast, open-source addon manager for The Elder Scrolls Online"
license = "BSL-1.1"
repository = "https://github.com/ESO-Toolkit/kalpa"

[lib]
name = "kalpa_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["rt"] }
scraper = "0.26"
zip = "8"
tempfile = "3"
regex = "1"
base64 = "0.22"
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2.5.3"
rayon = "1.11"
# "bundled" statically compiles SQLite (~1-2MB binary size increase) to avoid
# depending on a system SQLite installation. Worth it for portable releases.
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
strip = true # Only effective on Linux/macOS (no-op on Windows)
panic = "abort"
