[package]
name = "kalpa"
version = "0.1.0-beta.11"
edition = "2021"
description = "A fast, open-source addon manager for The Elder Scrolls Online"
license = "BSL-1.1"
repository = "https://github.com/ESO-Toolkit/kalpa"

[lib]
name = "kalpa_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
# Installs a heap-tracking global allocator (see src/bench_alloc.rs) so the
# uploader perf benchmark can report a peak-heap high-water mark. OFF by default;
# enable only for `cargo test --features bench-alloc … --ignored`. No effect on
# the app/release builds.
bench-alloc = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = { version = "0.13", features = ["blocking", "json", "query", "form", "multipart"] }
tokio = { version = "1", features = ["rt"] }
scraper = "0.27"
zip = "8"
tempfile = "3"
regex = "1"
base64 = "0.22"
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
rayon = "1.12"
# Fast non-cryptographic hasher (FxHashMap) for the uploader's per-event hot maps.
# Already present transitively in the lock file, so this adds no new compilation.
rustc-hash = "2"
typed-path = "0.12"
sha2 = "0.11"
md-5 = "0.11"
# "bundled" statically compiles SQLite (~1-2MB binary size increase) to avoid
# depending on a system SQLite installation. Worth it for portable releases.
rusqlite = { version = "0.39", features = ["bundled"] }
# File watching for the live log uploader (tails the active Encounter.log).
notify = "8"
# Drive-letter canonicalization that avoids Windows verbatim (`\\?\`) prefixes.
# The uploader round-trips canonical paths through the frontend and back into its
# own confinement check; std's canonicalize() emits verbatim paths that the check
# then rejects. dunce::canonicalize keeps paths in drive-letter form. Already in
# the lock file as a transitive dep, so this adds no new compilation.
dunce = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
keyring = { version = "3", features = ["windows-native"] }
# WebView2 COM interop for MemoryUsageTargetLevel (trim webview RAM when Kalpa is
# backgrounded to the tray). Caret ranges MUST unify with the copies tauri/wry
# pull transitively (currently webview2-com 0.38.2 / windows 0.61.x) — a
# duplicate windows-core would make `.controller()`/`.cast()` type-mismatch. If a
# tauri/wry bump moves webview2-com to a new minor, bump these two in lockstep.
# Verified 2026-07 (dependabot #246/#247): bumping to windows 0.62 /
# webview2-com 0.39 ahead of tauri/wry fails compile with E0599 in lib.rs —
# no import fix helps, the ICoreWebView2 from `webview.controller()` stays a
# 0.38/windows-core-0.61 type. Dependabot minors for these two crates are
# ignored in .github/dependabot.yml; drop those rules when tauri/wry move.
webview2-com = "0.38"
windows = "0.61"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS Keychain for token storage (same chunked layout as Windows).
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Secret Service (GNOME Keyring / KWallet over D-Bus) for token storage.
# `linux-native` (kernel keyutils) is intentionally NOT used — keyutils does not
# persist across reboots, which would silently log users out on every boot.
# `crypto-rust` picks the pure-Rust crypto backend so we avoid an openssl-sys
# build dependency. Without a running Secret Service daemon, operations fail
# soft (user logs in each launch).
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[profile.dev]
# Reduced debug info: the full dependency graph (reqwest/rustls/aws-lc/tauri/…)
# generates a debug PDB large enough to hit the MSVC linker's section limit
# (LNK1318 "Unexpected PDB error; LIMIT") and balloon `target/` disk use.
# Line-tables-only keeps backtraces/line numbers (enough for debugging) while
# cutting PDB size well under the limit and saving several GB on disk.
debug = "line-tables-only"

[profile.release]
lto = true
codegen-units = 1
strip = true # Only effective on Linux/macOS (no-op on Windows)
panic = "abort"
