[package]
name = "kalpa-slint-prototype"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
arboard = "3"
dirs = "6"
md-5 = "0.11"
regex = "1"
reqwest = { version = "0.13", features = ["blocking", "json", "query", "form", "multipart"] }
rayon = "1.12"
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
slint = { version = "1.17.0", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-femtovg", "renderer-software"] }
tempfile = "3"
zip = "8"

[build-dependencies]
slint-build = "1.17.0"
